2010-10-05  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_new.c, geo_simpletags.c: Fix simple tags so it includes the
	'\0' char at the end of strings just like a real tiff.  Modify 
	geo_new.c so we only drop the trailing '\0' char if that is what it
	really is.  All loosely related to:
	http://trac.liblas.org/ticket/188

2010-09-21  Frank Warmerdam  <warmerdam@pobox.com>

	* configure.ac, geotiff_proj4.c: Avoid use of projects.h. (GDAL #3761)

2010-05-28  Frank Warmerdam  <warmerdam@pobox.com>

	* bin/Makefile.am: add getopt.c to distribution.

	* Makefile.am: ensure geo_config.h.vc is distributed.

2010-05-09  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_new.c: Avoid memory overrun if more than MAX_VALUES geokeys 
	are encountered (#27).

	* configure.ac: fix --with-libz and --with-zlib aliases (#23)

2010-02-12  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/stateplane.csv: Fix califoria VII and added Kentuky Single Zone.
	http://trac.osgeo.org/gdal/ticket/3408

2010-01-12  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 1.3.0 release.

	* csv/*.c, cpl_csv_incode.c, geo_incode_defs.h, Makefile.am: rename 
	defs.h to geo_incode_defs.h and include it in distribution so incode
	table support will work out of the box.

2010-01-07  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_names.c: ensure that VerticalUnitsGeoKey works properly.

	* geo_write.c: switch SortKeys() to a simple bubble sort so we don't
	end up crashing when rewriting screwn geotiff tag sets with 
	duplicate geokeys (like some LAS files with multiple zero dummy tags)

	* geo_new.c: resize short and double arrays bigger when reading
	from an existing file to ensure we can update and add keys later.

2010-01-03  Frank Warmerdam  <warmerdam@pobox.com>

	* Makefile.am: set versioninfo to 2:0:0 as required by the change for
	1.3.0 in the ABI due to change of size of GTIFDefn structure. 
	(#19, GDAL #3309)

2009-12-30  Frank Warmerdam  <warmerdam@pobox.com>
