@@ -1,3 +1,7 @@
+2011-01-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* cpl_serv.h: Adjust EQUALN to avoid warnings on modern MSVC compiles.
+
 2010-10-05  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_new.c, geo_simpletags.c: Fix simple tags so it includes the
